[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown_to_html_converter"
version = "0.1.0"
dependencies = [
  "Markdown",
]
requires-python = ">= 3.12"
authors = [
  {name = "lazy_skunk"}
]
maintainers = [
  {name = "lazy_skunk"}
]
description = "This script converts all Markdown files in the 'io_content' directory to HTML files."
readme = "README.md"
license = {file = "LICENSE.txt"}

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "flake8",
  "isort",
  "mypy",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-config=.coveragerc --cov-report=html"
testpaths = ["tests"]

[tool.black]
line-length = 79

# Flake8 cannot be configured via pyproject.toml
# [tool.flake8]
# max-line-length = 79

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true